force-app/main/default/objects/SQX_Nonconformance__c/fields/SQX_Description__c.field-meta.xml
<CustomField>
    <fullName>SQX_Description__c</fullName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>