force-app/main/default/objects/SQX_Nonconformance__c/fields/SQX_QMS_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>SQX_QMS_Reference_Number__c</fullName>
    <label>QMS Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>