force-app/main/default/objects/SQX_Nonconformance__c/fields/SQX_Title__c.field-meta.xml
<CustomField>
    <fullName>SQX_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>