force-app/main/default/objects/SQX_Nonconformance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SQX_QMS_Reference_Number__c</columns>
    <columns>SQX_Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>